js/js.translator/testData/incremental/invalidation/jsExport/lib1/l1.5.kt
@JsName("baz") @JsExport inline fun foo() = 77
@JsName("gaz77") @JsExport fun gaz() = 99
